añadido solución a error Details

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/fonts.css" />
     <link rel="stylesheet" href="./css/responsive-main.css" />
     <link rel="stylesheet" href="./css/variables.css" />
     <link rel="stylesheet" href="./css/desktop.css" />
-    <link rel="stylesheet" href="./css/reset.css" />
+    
     <title>Document</title>
   </head>
   <body>
@@ -41,6 +42,9 @@
               alt="rincon"
             />
           </section>
+          <div class="lateral-details">
+            <p>DETAILS</p>
+          </div>
         </div>
         <section class="tienda-desplegable">
           <input type="checkbox" id="toggle-products" hidden />
